--- a/FootballMatchesBetting/appsettings.json
+++ b/FootballMatchesBetting/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=FootballMatchesBetting;Application Name=FootballMatchesBetting;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Trace"
     }
   },
   "AllowedHosts": "*"
